--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ migrate_working_dir/
 .pub/
 /build/
 
-lib/const.dart
+C:\Users\17ari\Desktop\flutter\flutter_gemini_app\lib\const.dart
 
 # Symbolication related
 app.*.symbols
